--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,6 @@
     <input type="text" id="location" placeholder="Enter Location">
     <button onclick="fetchWeather()">Check Weather</button>
     <div id="result"></div>
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
