--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <h1>Drone Weather Checker</h1>
-    <input type="text" id="location" placeholder="Enter Location">
+    <input type="text" id="location" placeholder="Enter Location" required>
     <button onclick="fetchWeather()">Check Weather</button>
     <div id="result"></div>
     <script src="static/script.js"></script>
