--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drone Weather Checker</title>
+    <link rel="stylesheet" href="static/style.css">
     <script>
         async function fetchWeather() {
             const location = document.getElementById('location').value;
