--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, #4facfe, #00f2fe);
+    background: linear-gradient(to right, #167dd7, #2d2663);
     color: #333;
     display: flex;
     justify-content: center;
