--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,10 @@
             const location = document.getElementById('location').value;
             await fetchWeather(location);
         }
+
+        function clearInput() {
+            document.getElementById('location').value = '';
+        }
     </script>
 </head>
 <body>
@@ -58,6 +62,7 @@
         <input type="text" id="location" name="location" placeholder="City or Coordinates" required>
         <button type="submit">Check Weather</button>
         <button type="button" onclick="useGeolocation()">Use My Location</button>
+        <button type="button" onclick="clearInput()">Clear</button>
     </form>
     <div id="result"></div>
 </body>
